5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1613_2426.log
== TEST (2019-03-29 12:33:09) 
-- CODE:
#ENTRADA
#tempo gasto 
t = float(input("digite t: "))
#velocidade média
vm = float(input("digite vm: "))

#SAÍDA
#distância percorrida
dp = v/t
#quantidade de litros gastos
q = dp/12.0

print(t)
print(vm)
print(dp)
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    dp = v/t
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:33:16) 
-- CODE:
#ENTRADA
#tempo gasto 
t = float(input("digite t: "))
#velocidade média
vm = float(input("digite vm: "))

#SAÍDA
#distância percorrida
dp = v/t
#quantidade de litros gastos
q = dp/12.0

print(t)
print(vm)
print(dp)
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    dp = v/t
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:33:30) 
-- CODE:
#ENTRADA
#tempo gasto 
t = float(input("digite t: "))
#velocidade média
vm = float(input("digite vm: "))

#SAÍDA
#distância percorrida
dp = vm/t
#quantidade de litros gastos
q = dp/12.0

print(t)
print(vm)
print(dp)
print(q)
-- OUTPUT:
9.0
100.0
11.11111111111111
0.9259259259259259
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:33:47) 
-- CODE:
#ENTRADA
#tempo gasto 
t = float(input("digite t: "))
#velocidade média
vm = float(input("digite vm: "))

#SAÍDA
#distância percorrida
dp = vm/t
#quantidade de litros gastos
q = dp/12.0

print(t)
print(vm)
print(dp)
print(q)
-- OUTPUT:
9.0
100.0
11.11111111111111
0.9259259259259259
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:35:49) 
-- CODE:
#ENTRADA
#tempo gasto 
t = float(input("digite t: "))
#velocidade média
vm = float(input("digite vm: "))

#SAÍDA
#distância percorrida
dp = vm/t
#quantidade de litros gastos
q = dp*12.0

print(t)
print(vm)
print(dp)
print(q)
-- OUTPUT:
9.0
100.0
11.11111111111111
133.33333333333331
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:36:10) 
-- CODE:
#ENTRADA
#tempo gasto 
t = float(input("digite t: "))
#velocidade média
vm = float(input("digite vm: "))

#SAÍDA
#distância percorrida
dp = vm/t
#quantidade de litros gastos
q = dp*12.0

print(dp)
print(q)
-- OUTPUT:
11.11111111111111
133.33333333333331
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:36:44) 
-- CODE:
#ENTRADA
#tempo gasto 
t = float(input("digite t: "))
#velocidade média
vm = float(input("digite vm: "))

#SAÍDA
#distância percorrida
dp = vm/t
#quantidade de litros gastos
q = 12.0/dp

print(dp)
print(q)
-- OUTPUT:
11.11111111111111
1.08
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 12:36:53) 
-- CODE:
#ENTRADA
#tempo gasto 
t = float(input("digite t: "))
#velocidade média
vm = float(input("digite vm: "))

#SAÍDA
#distância percorrida
dp = vm/t
#quantidade de litros gastos
q = 12.0/dp

print(dp)
print(q)
-- EXECUTION TIME:
0.166892
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
11.11111111111111
1.08
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
24.0
0.5
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
66.66666666666667
0.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:36:54) 
-- CODE:
#ENTRADA
#tempo gasto 
t = float(input("digite t: "))
#velocidade média
vm = float(input("digite vm: "))

#SAÍDA
#distância percorrida
dp = vm/t
#quantidade de litros gastos
q = 12.0/dp

print(dp)
print(q)
-- OUTPUT:
11.11111111111111
1.08
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:37:02) 
-- CODE:
#ENTRADA
#tempo gasto 
t = float(input("digite t: "))
#velocidade média
vm = float(input("digite vm: "))

#SAÍDA
#distância percorrida
dp = vm/t
#quantidade de litros gastos
q = 12/dp

print(dp)
print(q)
-- OUTPUT:
11.11111111111111
1.08
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:37:22) 
-- CODE:
#ENTRADA
#tempo gasto 
t = float(input("digite t: "))
#velocidade média
vm = float(input("digite vm: "))

#SAÍDA
#distância percorrida
dp = vm/t
#quantidade de litros gastos
q = 12/dp

print(dp)
print(q)
-- OUTPUT:
11.11111111111111
1.08
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 12:37:26) 
-- CODE:
#ENTRADA
#tempo gasto 
t = float(input("digite t: "))
#velocidade média
vm = float(input("digite vm: "))

#SAÍDA
#distância percorrida
dp = vm/t
#quantidade de litros gastos
q = 12/dp

print(dp)
print(q)
-- EXECUTION TIME:
0.1452
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
11.11111111111111
1.08
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
24.0
0.5
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
66.66666666666667
0.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:37:26) 
-- CODE:
#ENTRADA
#tempo gasto 
t = float(input("digite t: "))
#velocidade média
vm = float(input("digite vm: "))

#SAÍDA
#distância percorrida
dp = vm/t
#quantidade de litros gastos
q = 12/dp

print(dp)
print(q)
-- OUTPUT:
11.11111111111111
1.08
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:37:34) 
-- CODE:
#ENTRADA
#tempo gasto 
t = float(input("digite t: "))
#velocidade média
vm = float(input("digite vm: "))

#SAÍDA
#distância percorrida
dp = vm/t
#quantidade de litros gastos
q = 12./dp

print(dp)
print(q)
-- OUTPUT:
11.11111111111111
1.08
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:37:49) 
-- CODE:
#ENTRADA
#tempo gasto 
t = float(input("digite t: "))
#velocidade média
vm = float(input("digite vm: "))

#SAÍDA
#distância percorrida
dp = vm/t
#quantidade de litros gastos
q = 12./dp

print(dp)
print(q)
-- OUTPUT:
11.11111111111111
1.08
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:59:37) 
-- CODE:
#ENTRADA
#tempo gasto 
t = float(input("digite t: "))
#velocidade média
vm = float(input("digite vm: "))

#SAÍDA
#distância percorrida
dp = vm*t
#quantidade de litros gastos
q = dp/12

print(dp)
print(q)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:59:47) 
-- CODE:
#ENTRADA
#tempo gasto 
t = float(input("digite t: "))
#velocidade média
vm = float(input("digite vm: "))

#SAÍDA
#distância percorrida
dp = vm*t
#quantidade de litros gastos
q = dp/12

print(dp)
print(q)
-- EXECUTION TIME:
0.141721
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
